--- a/2nd-gen/packages/swc/stylesheets/global/global-button.css
+++ b/2nd-gen/packages/swc/stylesheets/global/global-button.css
@@ -338,10 +338,6 @@
   flex-grow: 1;
   justify-self: stretch;
   inline-size: 100%;
-
-  .swc-Button {
-    inline-size: 100%;
-  }
 }
 
 @media (prefers-reduced-motion: reduce) {
